<resources>
    <string name="app_name">SellDroid</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Jayalakshi-->
    <!--login-->
    <string name="user_login">Login</string>
    <string name="user_login_email">Email</string>
    <string name="user_login_password">Password</string>
    <string name="user_login_forgotPass">Forget Password</string>
    <string name="user_login_createAccnt">Create a New Account</string>
    <!--set New password page-->
    <string name="SetNewPassword">Set New Password</string>
    <string name="SetNewPassword_email">Email</string>
    <string name="SetNewPassword_phoneNum">Phone Number</string>
    <string name="SetNewPassword_NewPass">New Password</string>
    <string name="SetNewPassword_confirmPass">Confirm Password</string>
    <string name="SetNewPassword_cancel">CANCEL</string>
    <!--User Registration Page-->
    <string name="user_register">Register to SellDroid</string>
    <string name="user_register_name">Your Name</string>
    <string name="user_register_email">Your Email Address</string>
    <string name="user_register_phone">Phone Number</string>
    <string name="user_register_pass">Enter Password</string>
    <string name="user_register_confirmPass">Confirm Password</string>
    <!--User profile update Page-->
    <string name="update_user_profile">Update My Profile</string>
    <string name="update_user_profile_name">Name</string>
    <string name="update_user_profile_email">Email Address</string>
    <string name="update_user_profile_phoneNum">Phone Number</string>
    <string name="update_user_profile_password">Password</string>
    <!--user Profile page-->
    <string name="userProfileDate">DATE</string>
    <string name="UserProfileTotalCost">COST</string>
    <string name="UserProfileItem">ITEM</string>
    <string name="user_profile_date1">2020/02/08</string>
    <string name="user_profile_date2">2020/04/23</string>
    <string name="user_profile_cost1">RS.8500</string>
    <string name="user_profile_cost2">RS.750</string>
    <string name="user_profile_Item1">Guitar</string>
    <string name="user_profile_item2">Phone cover</string>
    <string name="user_profile_date3">2020/05/21</string>
    <string name="user_profile_date4">2020/06/01</string>
    <string name="user_profile_date5">2020/07/04</string>
    <string name="user_profile_cost3">RS.4750</string>
    <string name="user_profile_cost4">RS.450</string>
    <string name="user_profile_cost5">RS.10500</string>
    <string name="user_profile_date6">2020/08/11</string>
    <string name="user_profile_cost6">RS.1000</string>
    <string name="user_profile_item3">Hard Disk</string>
    <string name="user_profile_item4">Ear Phone</string>
    <string name="user_profile_item5">Nokia phone</string>
    <string name="user_profile_item6">USB</string>

    <!--Rusiru-->
    <!--Add Payment Method Layout-->
    <string name="nameOnTheCard">Name on the Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="validationPeriod">Validation Period</string>
    <string name="paymentPhoneNumber">Phone Number</string>
    <string name="addPaymentButton">ADD PAYMENT METHOD</string>
    <!--Cart-->
    <string name="cart_header">My Cart</string>
    <string name="ItemName">Item Name</string>
    <!--Payment Methods-->
    <string name="paymentTitle">My Payment Methods</string>
    <string name="paymentName">BOC Master Card</string>
    <string name="paymentCardNumber">4563 8547 8521 1121</string>
    <string name="validateDate">15/23</string>
    <string name="visaName">VISA</string>
    <string name="ntbName">NTB Online Card</string>
    <string name="hdfcName">HDFC Debit Card</string>
    <!--Select Payment Method-->
    <string name="selectPaymentTitle">Select Your Payment Method</string>
    <!--Home Page-->
    <string name="product_title_1">Samsung A50</string>
    <string name="product_price_1">Rs.27500</string>
    <string name="product_title_2">Apple iPhone 6s</string>
    <string name="product_price_2">Rs.45000</string>
    <string name="product_title_3">LG TV</string>
    <string name="product_price_3">Rs.235000</string>
    <string name="product_title_4">Panasonic Fan</string>
    <string name="product_price_4">Rs.7800</string>
    <!--Update Payment Method-->
    <string name="updatePaymentTitle">Update Payment Method</string>
    <string name="updatePaymentButton">Update</string>
    <string name="updatePaymentTitleDescription">"we won't share your information to others"</string>

    <!--Nithya-->
    <!--Add product-->
    <string name="productName">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="addProductButton">ADD PRODUCT</string>
    <!--Product page-->
    <string name="products">Products</string>
    <string name="productNAme">Razer Phone 2</string>
    <string name="Price">Rs.96500</string>
    <string name="sellerInformation">Seller Information</string>
    <string name="sellerName">Seller Name - Ravindu</string>
    <string name="sellerEmail">Seller Email - ravindu@gmail.com</string>
    <string name="sellerCompany">Seller Company - RK Stores</string>
    <string name="sellerPhoneNumber">Seller Phone Number - 0775632521</string>
    <string name="sellerAddress">Address - Colombo 3</string>
    <string name="addToCartButton">ADD TO CART</string>
    <string name="buyNowButton">BUY NOW</string>
    <!--Update product-->
    <string name="updateProductDetails">Update Product Details</string>
    <string name="ProductName">Product Name</string>
    <string name="PRice">Price</string>
    <string name="Quantity">Quantity</string>
    <string name="deleteProduct">DELETE PRODUCT</string>
    <string name="updateProductButton">UPDATE PRODUCT</string>
    <string name="Cancel">Cancel</string>
    <!--Seller items-->
    <string name="myItems">My Items</string>
    <string name="iphoneXsMax">i phone Xs Max</string>
    <string name="sGalaxyS20">S Galaxy S20</string>
    <string name="onePlus8Pro">One Plus 8 Pro</string>
    <string name="iphone11ProMax">i phone 11 Pro Max</string>


    <!-- Binu -->
    <!-- seller login-->
    <string name="email_seller_login">Enter Your email</string>
    <string name="password_seller_login">Enter your Password</string>
    <string name="email">Email</string>

    <!-- set new seller password-->
    <string name="set_password_email">Enter your seller email</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_name_seller_register">Enter Your Name</string>
    <string name="enter_your_email_address_seller_register">Enter Your Email Address</string>
    <string name="enter_company_shop_name_seller_register">Enter Company/Shop Name</string>

    <!--Seller register-->
    <string name="register_as_sellerB">Register As Seller</string>
    <string name="enter_your_nameB">Enter Your Name</string>
    <string name="enter_your_email_addressB">Enter Your Email Address</string>
    <string name="enter_company_shop_nameB">Enter Company/Shop Name</string>
    <string name="enter_company_shop_addressB">Enter Company/Shop Address</string>
    <string name="enter_phone_numberB">Enter Phone Number</string>
    <string name="enter_new_passwordB">Enter New Password</string>
    <string name="confirm_passwordB">Confirm Password</string>
    <string name="create_new_accountB">create new account</string>
    <string name="already_has_an_accountB">Already has an Account</string>


    <!--Seller profile-->
    <string name="led_mouseB">LED Mouse</string>
    <string name="samsung_j7B">Samsung J7</string>
    <string name="iphone_6sB">iPhone 6s</string>
    <string name="guitarB">Guitar</string>
    <string name="product_nameB">PRODUCT</string>
    <string name="priceB">PRICE</string>
    <string name="quantityB">QUANTITY</string>
    <string name="my_itemsB">My Items To Sell</string>
    <string name="iphone_5sB">iPhone 5s</string>
    <string name="wireless_chargerB">Wireless Charger</string>

    <!--Seller profile update-->
    <string name="update_seller_dataB">Update Seller Data</string>
    <string name="nameB">Name</string>
    <string name="email_addressB">Email Address</string>
    <string name="phone_numberB">Phone Number</string>
    <string name="enter_company_shop_nameBM">Enter Company/Shop Name</string>
    <string name="nameBM">Name</string>
    <string name="email_addressBM">Email Address</string>
    <string name="enter_company_shop_addressBM">Enter Company/shop address</string>
    <string name="phone_numberBM">Phone Number</string>
    <string name="passwordBM">Password</string>
    <string name="set_new_passwordBI">Set New Seller Password</string>
    <string name="set_new_passworddesBI">Forgot Your Seller Password... Change it Here</string>


</resources>
