<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".SellerRegister">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_as_sellerB"
                android:textColor="@color/textColor"
                android:textSize="32dp"
                android:gravity="center"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_your_nameB"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_your_email_addressB"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_shop_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_company_shop_nameB"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_shop_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_company_shop_addressB"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_register_pNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_phone_numberB"
                android:inputType="number"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/enter_new_passwordB"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/seller_register_conformPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/confirm_passwordB"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_accountB"
                android:textSize="18dp"
                android:background="@drawable/button_background"
                android:layout_margin="10dp"
                android:width="45dp"
                android:padding="15dp"
                android:id="@+id/seller_register_button"/>

            <TextView
                android:id="@+id/seller_register_to_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/already_has_an_accountB" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:gravity="center"
                android:id="@+id/seller_register_cancel"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>