<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/updateProductDetails"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/textColor"
                android:textSize="36dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/ProductName"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/PRice"
                android:inputType="number"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/Quantity"
                android:inputType="number"
                android:maxLines="1"
                android:padding="15dp" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/update_product_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_add_product"/>

            <Button
                android:id="@+id/update_product_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:width="45dp"
                android:background="@drawable/button_background"
                android:padding="15dp"
                android:text="@string/updateProductButton"
                android:textSize="18dp" />

            <Button
                android:id="@+id/delete_product_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:width="45dp"
                android:background="@drawable/button_delete_background"
                android:padding="15dp"
                android:text="@string/deleteProduct"
                android:textSize="18dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:gravity="center"
                android:id="@+id/update_product_cancel"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>