<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_login"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/textColor"
                android:textSize="36dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_login_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/user_login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="LOGIN"
                android:textSize="18dp"
                android:background="@drawable/button_background"
                android:layout_margin="10dp"
                android:width="45dp"
                android:padding="15dp"
                android:id="@+id/login_button"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login to Seller Account"
                android:padding="5dp"
                android:gravity="center"
                android:id="@+id/login_as_seller"/>

            <TextView
                android:id="@+id/foget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/user_login_forgotPass" />

            <TextView
                android:id="@+id/create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/user_login_createAccnt" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
