<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".UserProfileUpdate">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/update_user_profile"
                android:textColor="@color/textColor"
                android:textSize="32dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/update_user_profile_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/update_user_profile_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_user_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/update_user_profile_phoneNum"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/update_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/update_user_profile_password"
                android:inputType="text"
                android:maxLines="1"
                android:padding="15dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"
                android:textSize="18dp"
                android:background="@drawable/button_background"
                android:layout_margin="10dp"
                android:width="45dp"
                android:padding="15dp"
                android:id="@+id/update_user_button"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DELETE ACCOUNT"
                android:textSize="18dp"
                android:background="@drawable/button_delete_background"
                android:layout_margin="10dp"
                android:width="45dp"
                android:padding="15dp"
                android:id="@+id/delete_user_account"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CANCEL UPDATE"
                android:gravity="center"
                android:id="@+id/cancel_user_update"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>